[package]
name = "bevy-async-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", default-features = false, features = ["bevy_log"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.44.2", features = ["sync"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.44.2", features = ["sync"] }

[features]
tokio-runtime = ["tokio/rt", "tokio/rt-multi-thread"]
