[package]
name = "bevy-async-runner"
description = "Bevy Async Runner simplifies working with asynchronous code in the Bevy game engine. It provides a mechanism to schedule and execute async tasks and provide their result to any system."
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/DarkZek/bevy-async-runner"
categories = ["asynchronous", "wasm"]
keywords = ["bevy", "async"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = ["bevy_log"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.44.2", features = ["sync"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.44.2", features = ["sync"] }

[features]
tokio-runtime = ["tokio/rt"]
tokio-runtime-multi-thread = ["tokio/rt", "tokio/rt-multi-thread"]
